--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node scripts/startServer.js",
+    "build": "npm i",
     "dev": "nodemon scripts/startServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
