--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dynych_bot",
   "version": "1.0.0",
   "description": "",
-  "main": "scripts/startServer.js",
+  "main": "index.js",
   "scripts": {
     "start": "node scripts/startServer.js",
     "dev": "nodemon scripts/startServer.js",
