--- a/now.json
+++ b/now.json
@@ -2,11 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/**.js",
-      "use": "@now/node"
-    },
-    {
-      "src": "scripts/startServer.js",
+      "src": "api/app.js",
       "use": "@now/node"
     }
   ],
