--- a/now.json
+++ b/now.json
@@ -1,20 +1,12 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/scr/**.js",
-      "use": "@now/node"
-    },
-    {
-      "src": "api/app.js",
-      "use": "@now/node"
+  "build": {
+    "env": {
+      "TELEGRAM_SERVER_URL": "https://api.telegram.org/bot",
+      "TELEGRAM_API_TOKEN": "973688039:AAFUvaV2OpEEsLjz7wibGnhy10R_kpVq6Nk",
+      "MEMES_SERVER_URL": "https://admem.ru",
+      "MEMES_PATH": "/ajax/ASDF/rndm/ASDFA/SDF/",
+      "MEME_PATH": "/content/images"
     }
-  ],
-  "env": {
-    "TELEGRAM_SERVER_URL": "https://api.telegram.org/bot",
-    "TELEGRAM_API_TOKEN": "973688039:AAFUvaV2OpEEsLjz7wibGnhy10R_kpVq6Nk",
-    "MEMES_SERVER_URL": "https://admem.ru",
-    "MEMES_PATH": "/ajax/ASDF/rndm/ASDFA/SDF/",
-    "MEME_PATH": "/content/images"
   }
 }
