--- a/now.json
+++ b/now.json
@@ -1,12 +1,23 @@
 {
   "version": 2,
-  "build": {
-    "env": {
-      "TELEGRAM_SERVER_URL": "https://api.telegram.org/bot",
-      "TELEGRAM_API_TOKEN": "973688039:AAFUvaV2OpEEsLjz7wibGnhy10R_kpVq6Nk",
-      "MEMES_SERVER_URL": "https://admem.ru",
-      "MEMES_PATH": "/ajax/ASDF/rndm/ASDFA/SDF/",
-      "MEME_PATH": "/content/images"
-    }
-  }
+  "builds": [{
+    "src": "app.js",
+    "use": "@now/node-server"
+  }],
+  "env": {
+    "TELEGRAM_SERVER_URL": "https://api.telegram.org/bot",
+    "TELEGRAM_API_TOKEN": "973688039:AAFUvaV2OpEEsLjz7wibGnhy10R_kpVq6Nk",
+    "MEMES_SERVER_URL": "https://admem.ru",
+    "MEMES_PATH": "/ajax/ASDF/rndm/ASDFA/SDF/",
+    "MEME_PATH": "/content/images"
+  },
+  "routes": [{
+    "headers": {
+      "Access-Control-Allow-Origin": "*",
+      "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+      "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
+    },
+    "src": "/.*",
+    "dest": "/app.js"
+  }]
 }
