--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [{
-    "src": "app.js",
+    "src": "scripts/startServer.js",
     "use": "@now/node-server"
   }],
   "env": {
