--- a/now.json
+++ b/now.json
@@ -12,12 +12,7 @@
     "MEME_PATH": "/content/images"
   },
   "routes": [{
-    "headers": {
-      "Access-Control-Allow-Origin": "*",
-      "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-      "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
-    },
     "src": "/.*",
-    "dest": "/app.js"
+    "dest": "/scripts/startServer.js"
   }]
 }
