--- a/now.json
+++ b/now.json
@@ -12,6 +12,11 @@
     "MEME_PATH": "/content/images"
   },
   "routes": [{
+    "headers": {
+      "Access-Control-Allow-Origin": "*",
+      "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+      "Access-Control-Allow-Headers": "Content-Type, Accept"
+    },
     "src": "/.*",
     "dest": "/scripts/startServer.js"
   }]
