--- a/now.json
+++ b/now.json
@@ -15,7 +15,7 @@
     "headers": {
       "Access-Control-Allow-Origin": "*",
       "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-      "Access-Control-Allow-Headers": "Content-Type, Accept"
+      "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
     },
     "src": "/.*",
     "dest": "/scripts/startServer.js"
