--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "form-data": "^2.5.0",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
