--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "form-data": "^2.5.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "pg": "^7.12.1",
+    "sequelize": "^5.15.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
