--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "form-data": "^2.5.0",
         "node-fetch": "^2.6.0",
         "pg": "^7.12.1",
+        "pickerjs": "^1.2.1",
         "sequelize": "^5.15.1",
+        "uuid": "^3.3.3",
         "ytdl-core": "^0.29.5"
     },
     "devDependencies": {
