--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "ffmpeg": "0.0.4",
         "form-data": "^2.5.0",
         "node-fetch": "^2.6.0",
         "pg": "^7.12.1",
