--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "start": "node scripts/startServer.js",
         "dev": "nodemon scripts/startServer.js",
         "sync": "browser-sync start --c browser-sync.config.js",
+        "pwa-build": "webpack",
+        "pwa-dev": "webpack-dev-server",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -28,13 +30,28 @@
         "node-fetch": "^2.6.0",
         "pg": "^7.12.1",
         "pickerjs": "^1.2.1",
+        "react": "^16.9.0",
+        "react-proptypes": "^1.0.0",
         "sequelize": "^5.15.1",
         "uuid": "^3.3.3",
         "ytdl-core": "^0.29.5"
     },
     "devDependencies": {
+        "@babel/core": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
+        "@babel/preset-react": "^7.0.0",
+        "babel-loader": "^8.0.6",
         "browser-sync": "^2.26.7",
-        "nodemon": "^1.19.1"
+        "css-loader": "^3.2.0",
+        "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.12.0",
+        "nodemon": "^1.19.1",
+        "react-dom": "^16.9.0",
+        "sass-loader": "^8.0.0",
+        "style-loader": "^1.0.0",
+        "webpack": "^4.39.3",
+        "webpack-cli": "^3.3.7",
+        "webpack-dev-server": "^3.8.0"
     },
     "engines": {
         "node": "10.x"
