--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     },
     "homepage": "https://github.com/yev-p/dynych_bot#readme",
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.22",
+        "@fortawesome/free-regular-svg-icons": "^5.10.2",
+        "@fortawesome/free-solid-svg-icons": "^5.10.2",
+        "@fortawesome/react-fontawesome": "^0.1.4",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "ffmpeg": "0.0.4",
