--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
-        "app-manifest-webpack-plugin": "^1.2.0",
         "babel-loader": "^8.0.6",
         "babel-polyfill": "^6.26.0",
         "browser-sync": "^2.26.7",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^5.0.4",
         "css-loader": "^3.2.0",
+        "favicons-webpack-plugin": "^1.0.2",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.12.0",
         "nodemon": "^1.19.1",
