--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@fortawesome/free-regular-svg-icons": "^5.11.2",
         "@fortawesome/free-solid-svg-icons": "^5.11.2",
         "@fortawesome/react-fontawesome": "^0.1.7",
+        "bluebird": "^3.7.1",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "form-data": "^2.5.1",
