--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
         "@fortawesome/free-regular-svg-icons": "^5.11.2",
         "@fortawesome/free-solid-svg-icons": "^5.11.2",
         "@fortawesome/react-fontawesome": "^0.1.7",
-        "bluebird": "^3.7.1",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "form-data": "^2.5.1",
         "node-fetch": "^2.6.0",
+        "node-schedule": "^1.3.2",
         "react": "^16.11.0",
         "react-proptypes": "^1.0.0",
         "ytdl-core": "^0.29.7"
