move emojis parser to build script

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+!**.gitkeep
+
 .idea
 node_modules
 
-public/*
 src/emojis/collections/*
-!**.gitkeep
+!src/emojis/collections/src.json
 
 TODO.js
 test.js
